force-app/main/default/objects/Sales_Log__c/Sales_Log__c.object-meta.xml
<CustomObject>
    <label>Sales Log</label>
    <nameField>
        <label>Item Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>