force-app/main/default/objects/Sales_Log__c/fields/Order_Priority__c.field-meta.xml
<CustomField>
    <fullName>Order_Priority__c</fullName>
    <label>Order Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>