force-app/main/default/objects/Sales_Log__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <label>Total Profit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>