force-app/main/default/objects/Sales_Log__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>