force-app/main/default/objects/Sales_Log__c/fields/Units_Sold__c.field-meta.xml
<CustomField>
    <fullName>Units_Sold__c</fullName>
    <label>Units Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>