force-app/main/default/objects/Sales_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Country__c</columns>
    <columns>Sales_Channel__c</columns>
    <columns>Order_Priority__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Ship_Date__c</columns>
    <columns>Units_Sold__c</columns>
    <columns>Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>